--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "eurekaserver"]
 	path = eurekaserver
 	url = git@github.com:guilhermepereiradev/eurekaserver.git
+[submodule "ms-cloudgateway"]
+	path = ms-cloudgateway
+	url = git@github.com:guilhermepereiradev/ms-cloudgetway.git
